# boycivenga-iac

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .tflint.hcl  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/: settings.local.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: terraform_plan_request.md
.github/policies/: README.md  common.rego  terraform_plan.rego
docs/: ARCHITECTURE.md  NETWORK.md  QUICKSTART.md  README.md  RUNBOOK.md  netbox-schema.md  netbox-tfvars-mapping.md  render-pipeline-latest-run.md  render-pipeline.md
docs/phase4/: drift.md  (+6 more)
mcp-server/: .gitignore  README.md  TESTING.md  pyproject.toml
mcp-server/src/boycivenga_mcp/: __init__.py  github_client.py  server.py
mcp-server/src/boycivenga_mcp/tools/: get_status.py  trigger_apply.py  trigger_plan.py  trigger_render.py
mcp-server/tests/: test_github_client.py
mcp-server/tests/test_tools/: test_get_status.py  test_trigger_apply.py  test_trigger_plan.py  test_trigger_render.py
netbox-client/: README.md  docker-compose.yml
scripts/: README.md  apply_via_unifi.py  bootstrap.sh  generate-plan-diff.py  init-unifi-controller.sh  plan_unifi.py  run-integration-tests.sh  test-attestation-gate.sh  test-plan-output.sh  test-policy-engine.sh  wait-for-unifi.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tf  terraform.tfvars.example  variables.tf
(+79 files in other folders)
